<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblText1Text"
                    android:id="@+id/textView"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText"
                    android:inputType="numberDecimal"
                    android:gravity="end"
                    android:layout_below="@+id/textView"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView2Text"
                    android:id="@+id/textView2"
                    android:layout_below="@+id/editText"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView3Text"
                    android:id="@+id/textView3"
                    android:layout_below="@+id/editText"
                    android:layout_centerHorizontal="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText2"
                    android:inputType="numberDecimal"
                    android:gravity="end"
                    android:layout_below="@+id/textView2"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_toRightOf="@+id/textView3"
                    android:layout_toEndOf="@+id/textView3" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText3"
                    android:inputType="number"
                    android:gravity="end"
                    android:layout_below="@+id/textView3"
                    android:layout_toLeftOf="@+id/editText2"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Total"
                    android:id="@+id/textView4"
                    android:layout_below="@+id/editText2"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText4"
                    android:inputType="numberDecimal"
                    android:gravity="end"
                    android:layout_below="@+id/textView4"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonText"
                    android:id="@+id/button"
                    android:layout_below="@+id/editText4"
                    android:layout_alignRight="@+id/textView4"
                    android:layout_alignEnd="@+id/textView4" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonText2"
                    android:id="@+id/button2"
                    android:layout_below="@+id/editText4"
                    android:layout_toLeftOf="@+id/button"
                    android:layout_toStartOf="@+id/button" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView5Text"
                    android:id="@+id/textView5"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView6Text"
                    android:id="@+id/textView6"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText5"
                    android:inputType="numberDecimal"
                    android:gravity="end"
                    android:layout_gravity="center_horizontal"
                    android:layout_below="@+id/textView5"
                    android:layout_toRightOf="@+id/button4"
                    android:layout_toEndOf="@+id/button4" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText6"
                    android:inputType="number"
                    android:gravity="end"
                    android:layout_below="@+id/textView6"
                    android:layout_alignRight="@+id/textView6"
                    android:layout_alignEnd="@+id/textView6"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button3Text"
                    android:id="@+id/button3"
                    android:layout_below="@+id/editText5"
                    android:layout_alignRight="@+id/textView5"
                    android:layout_alignEnd="@+id/textView5" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button4Text"
                    android:id="@+id/button4"
                    android:layout_below="@+id/editText5"
                    android:layout_toLeftOf="@+id/button3"
                    android:layout_toStartOf="@+id/button3" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>